--- a/css/form.css
+++ b/css/form.css
@@ -6,6 +6,7 @@
 }
 .form__header{
     color: black;
+    text-align: center;
 }
 .form__field{
     border: 1px solid darkgreen;
@@ -21,6 +22,7 @@
     padding: 10px;
     color: white;
     border-radius: 10px;
+    box-shadow: 10px 10px 5px rgba(36, 22, 22, 0.664);
 }
 
 .form__button:hover{
@@ -33,8 +35,20 @@
 
 .form__fieldset{
     border-radius: 10px;
-    border: 3px solid darkgreen;
+    border: 2px solid darkgreen;
     padding: 20px;
-    margin: 20px 0px;
+    margin: 5px;
     background-color: rgba(241, 250, 250, 0.863);
-    }
+    box-shadow: 10px 10px 5px rgba(36, 22, 22, 0.664);
+}
+
+.form__info{
+    text-align: center;
+    color: gray;
+    font-style: italic;
+}
+
+.form__result{
+    text-align: center;
+    font-size: larger;
+}
